thirdparty/boost/libs/multiprecision/test/compile_fail/.uuid
201bc997-a648-4314-9166-65fdea10bb72